--- a/src/styles/scss/layout/header.module.scss
+++ b/src/styles/scss/layout/header.module.scss
@@ -1,18 +1,13 @@
-
-
 .container {
-  background-color: fff;
-  height: 100px;
+  position: fixed;
+  width: 100%;
+  background-color: #fff;
+  height: 60px;
   padding: 0px 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: .3);
-
-  h1 {
-    font-size: 32px;
-    font-weight: 700;
-  }
 
   li {
     list-style-type: none;
@@ -20,13 +15,15 @@
 
     ul {
       padding: 0px 20px;
-      transition: .1s;
       font-weight: 600;
 
-      &:hover {
-        color: red;
-        text-decoration: underline;
-        cursor: pointer;
+      a {
+        transition: .1s;
+        &:hover {
+          color: red;
+          text-decoration: underline;
+          cursor: pointer;
+        }
       }
     }
   }
