--- a/src/styles/scss/layout/header.module.scss
+++ b/src/styles/scss/layout/header.module.scss
@@ -9,6 +9,12 @@
   align-items: center;
   box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: .3);
 
+  h1 {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   li {
     list-style-type: none;
     display: flex;
@@ -17,8 +23,9 @@
       padding: 0px 20px;
       font-weight: 600;
 
-      a {
+      h4 {
         transition: .1s;
+        
         &:hover {
           color: red;
           text-decoration: underline;
