--- a/src/styles/scss/articles/glibTutorial/glibtutorial.module.scss
+++ b/src/styles/scss/articles/glibTutorial/glibtutorial.module.scss
@@ -1,4 +1,12 @@
 .root {
-  height: 1000px;
-  border: 1px solid black;
+  min-height: 1000px;
+
+  .panel {
+    width: 300px;
+    height: 100%;
+    background-color: #fefefe;
+    border-radius: 0px 10px 0px 0px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+    position: fixed;
+  }
 }
