--- a/src/styles/scss/main.module.scss
+++ b/src/styles/scss/main.module.scss
@@ -1,6 +1,6 @@
 .root {
   * {
-    font-family: 'IBM Plex Serif', serif;
+    font-family: 'Lora', serif;
   }
 
   h1 {
@@ -20,12 +20,18 @@
 
   h4 {
     font-size: 18px;
-    font-weight: 600;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  h6 {
+    font-size: 18px;
   }
 
   p {
-    font-size: 17px;
-    letter-spacing: 1px;
+    font-size: 18px;
     font-weight: 400;
   }
 
