--- a/src/styles/scss/articles/glibTutorial/glibtutorial.module.scss
+++ b/src/styles/scss/articles/glibTutorial/glibtutorial.module.scss
@@ -1,12 +1,9 @@
 .root {
-  min-height: 1000px;
+  min-height: 700px;
+  display: flex;
 
-  .panel {
-    width: 300px;
-    height: 100%;
-    background-color: #fefefe;
-    border-radius: 0px 10px 0px 0px;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
-    position: fixed;
+  .contents {
+    width: 100%;
+    padding: 10px 10px 10px 30px;
   }
 }
