--- a/src/styles/scss/common/bookmark.module.scss
+++ b/src/styles/scss/common/bookmark.module.scss
@@ -1,7 +1,43 @@
 .root {
-  width: 400px;
-  min-height: 1000px;
-  background-color: #fefefe;
+  width: 300px;
+  background-color: #fcfbff;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-  padding-left: 10px;
+  padding: 10px;
+  position: relative;
+  
+  h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    height: 50px;
+  }
+
+  p {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    padding-left: 10px;
+    text-transform: capitalize;
+    transition: .05s;
+    margin: 10px 0px;
+
+    svg {
+      margin-right: 10px;
+    }
+
+    &:hover {
+      background-color: #efecff;
+    }
+  }
+
+  .selected {
+    transition: .2s;
+    border-radius: 0px 0px 0px 0px;
+    border-right : 5px solid #0509ee;
+    border-left: 5px solid #0509ee;
+    background-color: #efecff;
+  }
 }
