--- a/src/styles/scss/layout/footer.module.scss
+++ b/src/styles/scss/layout/footer.module.scss
@@ -1,64 +1,49 @@
-.container {
+@import '../colors';
 
-  .top {
-    height: 70px;
-    background-color: #2C3333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.root {
+  background-image: linear-gradient(to bottom right, #01093a, #2c0b02);
+  border-radius: 0px 20px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    h1 {
-      color: #ffffff;
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 23px;
-    }
+  p {
+    color: $light-text-color;
+    text-align: center;
   }
 
-  .middle {
-    height: 400px;
-    display: flex;
+  h1 {
+    color: $light-text-color;
+    padding-bottom: 30px;
+    text-align: center;
+  }
 
-    .left {
-      width: 400px;
-    }
-    
-    .right {
-      width: calc(100% - 400px);
-      background-color: #777777;
-      padding: 20px 20px;
+  .container {
+    width: 1000px;
+    padding: 100px 200px;
 
-      div {
-        font-size: 18px;
-        font-weight: 400;
-        color: #fff;;
-        display: flex;        
-        align-items: center;
-        height: 35px;
-
-        p {
-          padding-left: 5px;
-          
-          a {
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-        }
+    .icons {
+      padding: 20px 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      svg {
+        margin: 0px 15px;
+        border: 2px solid white;
+        color: white;
+        padding: 5px;
+        border-radius: 50%;
       }
-
     }
   }
 
-  .down {
-    height: 50px;
-    background-color: #D9D9D9;
+  .bottom {
+    height: 60px;
+    width: 100%;
+    background-color: black;
     display: flex;
-    justify-content: center;
     align-items: center;
-
-    h1 {
-      font-weight: 600;
-    }
+    justify-content: center;
   }
 }
