--- a/src/styles/scss/_colors.scss
+++ b/src/styles/scss/_colors.scss
@@ -1,3 +1,4 @@
 $separator-color: rgba(100, 100, 100, 0.7);
 $date-color: rgba(50, 50, 50, 1);
 $light-text-color: #fefcfc;
+$book-mark-color: #fcfbff;
