--- a/src/styles/scss/common/bookmark.module.scss
+++ b/src/styles/scss/common/bookmark.module.scss
@@ -1,6 +1,8 @@
+@import '../colors';
+
 .root {
   width: 300px;
-  background-color: #fcfbff;
+  background-color: $book-mark-color;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
   padding: 10px;
   position: relative;
