--- a/src/styles/scss/articles/page.module.scss
+++ b/src/styles/scss/articles/page.module.scss
@@ -6,9 +6,27 @@
     margin-bottom: 20px;
   }
 
+  .table {
+    border-left: 1px solid teal;
+    border-right: 1px solid teal;
+
+    tbody {
+      tr {
+        &:hover {
+          background-color: rgba(#008080, 0.09);
+          transition: .1s;
+        }
+      }
+    }
+  }
+
   p {
     text-align: justify;
     margin-bottom: 20px;
+  }
+
+  h3 {
+    padding: 30px 0px 20px 0px;
   }
 
   ul {
