feat: style a element

--- a/src/styles/scss/articles/page.module.scss
+++ b/src/styles/scss/articles/page.module.scss
@@ -38,6 +38,12 @@
       font-weight: 400;
     }
   }
+
+  a {
+    color: blue;
+    text-decoration: underline;
+    margin-left: 4px;
+  }
   
   pre {
     background: #f4f4f4;
