--- a/src/styles/scss/layout/header.module.scss
+++ b/src/styles/scss/layout/header.module.scss
@@ -36,3 +36,14 @@
     }
   }
 }
+
+@media (max-width: 800px) {
+  .container {
+    justify-content: center;
+    padding: 0px;
+
+    .name {
+      display: none;
+    }
+  }
+}
